# BlackBox

./: .dockerignore  .gitignore  AUDIT_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  blackbox.py  docker-compose.yml  pyproject.toml  requirements-minimal.txt
agents/: agents.js
agents/security-prompts/: comet-opik.md  dynatrace-expert.md  elasticsearch-observability.md  github-actions-expert.md  jfrog-sec.md  platform-sre-kubernetes.md  se-security-reviewer.md  stackhawk-security-onboarding.md  tdd-refactor.md  terraform.md  wg-code-sentinel.md
cli/: __init__.py  authorization.py  blackbox_cli.py  darkweb_commands.py  deep_commands.py  findings.py  intel_commands.py  main.py  session.py
config/: authorized_scope.yaml  modules.yaml  prometheus.yml
config/api/: proxyscrape.json  scrapfly.json
config/scraper-config/: default.yaml
docs/: AMD-DEBUGGING-DOCTRINE.md  ATTACK-PLAYBOOK.md  AUDIT_PROTOCOL.md  BLACKHAT-CLAUDE.md  BOUNTY_RULEBOOK.md  BOUNTY_RULEBOOK_v12.1.md  CLAUDE-REFERENCE.md  DESIGN_SPECIFICATION.md  EXTERNAL-INTEGRATIONS.md  FOUNDATION.md  NASA-DEBUGGING-DOCTRINE.md  NVIDIA-DEBUGGING-DOCTRINE.md  RESEARCH_INTEL.md  REVERSE-ENGINEERING-METHODOLOGY.md  REVIEWER-PLAYBOOK.md  RE_METHODOLOGY.md  SECURITY_TOOLS_IMPLEMENTATION.md  TESLA-DEBUGGING-DOCTRINE.md  TOKEN_OPTIMIZATION_PLAN.md  TOKEN_QUICKREF.md  TOOLKIT_REFERENCE.md  TOOL_INVENTORY.md  TOR-INTEGRATION.md  UNIFIED_TOOLKIT.md  api-reference.md  cli-reference.md  getting-started.md  index.md
docs/checklists/: fingerprinting.md
modules/: INTEGRATION_SUMMARY.md  __init__.py  adversary_emulation.py  ai_security.py  base.py  cli.py  docker.py  external_tools.py  h1_bridge.py  hackerone.py  loader.py  oauth.py  registry.py  signatures.py
modules/arsenal/: __init__.py  module.py
modules/bugbounty/: __init__.py  integrity-check.py  module.py  pre-commit-checks.py  re-analyzer.py  report-generator.py  rules-engine.py  scanner-suite.py  session.py  target-init.py  task-tracker.py
modules/command/: __init__.py  agent_system.py  ai_integration.py  api_routes.py  chat_engine.py  command_interpreter.py  deadman_intelligence_bridge.py  intel_cli.py  intelligence_agents.py  intelligence_analyzer.py  json_repair.py  llm_connector.py  llm_router.py  (+9 more)
scripts/: audit_references.py  verify_imports.py
standards/: DATA_STANDARDS.md  __init__.py
tests/: __init__.py  conftest.py
tools/: __init__.py
workflows/: debug_methodology.yaml  debug_standards_enforcement.py  orchestrator.py  pentest_workflow.yaml  pipeline.py  prioritization.py  tiktok_exploit_loop.yaml
(+215 files in other folders)
