[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox"
version = "2.0.0"
description = "BlackBox Security Platform - Unified security tools and penetration testing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HexStrike Team", email = "hexstrike@example.com"},
    {name = "DeadManOfficial"}
]
keywords = [
    "security",
    "penetration-testing",
    "vulnerability-scanning",
    "ctf",
    "osint",
    "reconnaissance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "flask>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
browser = [
    "playwright>=1.40",
]
full = [
    "playwright>=1.40",
    "mcp>=0.9",
    "anthropic>=0.18",
]

[project.scripts]
hexstrike = "cli.main:main"

[project.urls]
Homepage = "https://github.com/hexstrike/hexstrike-ai"
Documentation = "https://github.com/hexstrike/hexstrike-ai#readme"
Repository = "https://github.com/hexstrike/hexstrike-ai"

[tool.setuptools]
packages = ["cli", "modules", "tools", "tools.scanners", "tools.attacks", "tools.recon", "tools.ai", "tools.intel", "tools.audit", "tools.stealth", "tools.pentest", "tools.auth", "config", "workflows", "agents"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
